# md2docx

./: .coverage  .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  SESSION_LOG.md  TESTING.md  go.mod  go.sum  pyproject.toml
.claude/memory/: MEMORY.md
.github/workflows/: ci.yml  release.yml
cmd/md2docx/: main.go
internal/cli/: convert_test.go  merge.go  root.go  styles.go  styles_test.go
internal/merge/: merge.go  merge_test.go
internal/ooxml/: headerfooter.go  headerfooter_test.go  numbering.go  numbering_test.go  styles.go  styles_test.go  types.go  units.go  units_test.go  writer.go  writer_test.go
internal/parser/: frontmatter.go  frontmatter_test.go  markdown.go
internal/render/: cover.go  cover_test.go  heading_number.go  heading_number_test.go  image.go  image_test.go  renderer.go  renderer_test.go  setup_test.go  table.go  table_test.go  toc.go  toc_test.go
internal/style/: loader.go  loader_test.go  types.go
specs/001-go-rewrite/: analyze.md  plan.md  spec.md  tasks.md
src/md2docx/: __init__.py  cli.py  convert.py  css2style.py  frontmatter.py  merge.py  pandoc.py  postprocess.py  style.py
styles/: default.yaml
styles/default/: reference.docx  style.yaml
testdata/: academic-sample.md  basic.md  contents.yaml  default-mixed.md  merge_ch1.md  merge_ch2.md  merge_ch3.md  simple-note.md  with_image.md  with_table.md
tests/: conftest.py  test_convert.py  test_css2style.py  test_frontmatter.py  test_merge.py  test_pandoc.py  test_postprocess.py  test_style.py
tests/fixtures/: academic.css  simple.md  with_frontmatter.md
(+7 files in other folders)
